Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82459

Don't assert when unsupported types are used in custom materials/effects

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.0 Beta1, 5.15
    • 5.15.0 Alpha
    • Quick: 3D
    • None
    • 7de8feae663b702ea83a30d73f97a0c9b95879be (qt/qtquick3d/5.15)
    • Qt Quick 3D - Week 9/10

    Description

      Properties inside a custom material or an effect are converted to uniforms, right now we'll assert if we can't convert the type into a uniform. This should be a warning instead and we should add documentation explaining which types are supported and which uniform type they will be converted to (ref. https://doc.qt.io/qt-5/qml-qtquick-shadereffect.html)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            stromme Christian
            stromme Christian
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes