Don't assert when there's no uniform conversion for a property

... instead issue a more helpful warning

Fixes: QTBUG-82459
Change-Id: I45ce5e6208883e18b82f6f51e680e5a331719197
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>